--- a/htmls/post-st.css
+++ b/htmls/post-st.css
@@ -1,6 +1,6 @@
-/* header */
-/* Reset some default styles */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/*基本設定*/
 *{
     margin: 0;
     padding: 0;
@@ -9,10 +9,29 @@
     scroll-padding-top: 3rem;
     font-family: var(--font-family-2);
 }
-
 :root{
+    --main-color: #cd8b86;
     --second-color: #f5eee4;
+    --text-color: #060413;
+    --container-color: #f8e4be;
+    --bg-color: #f9f6f2;
+    --text-alter-color: #94908e;
+    --poppins-font: "Poppins", sans-serif;
+    --font-family-2: "Playfair Display", serif;
 }
+
+/*主體*/
+body{
+    color: var(--text-color);
+    background: var(--bg-color);
+
+}
+
+a{
+    text-decoration: none;
+
+}
+
 
 body{
     background:var(--second-color);
@@ -24,104 +43,8 @@ ul {
     margin: 0;
 }
 
-a {
-text-decoration: none;
-color: inherit;
-}
-
-/* main-Sidebar styles */
-.main-sidebar {
-    height: 100vh; /* 讓導航欄覆滿整個視窗的高度 */
-    width: 250px; /* 導航欄寬度 */
-    position: fixed; /* 固定位置 */
-    left: 0; /* 貼近左側 */
-    top: 0; /* 貼近頂部 */
-    background-color: var(--second-color); /* 設置背景顏色 */
-    color: white; /* 文本顏色 */
-    border: 1px solid #989090;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.main-sidebar nav ul li {
-margin: 10px 0; /* 添加一些間距 */
-}
-
-.main-sidebar nav ul li a {
-    padding: 10px 15px; /* 添加一些內邊距 */
-    display: block; /* 讓連結充滿列表項 */
-    color:rgb(0, 0, 0); /* 連結顏色 */
-    transition: background-color 0.3s; /* 過渡效果 for hover */
-}
-
-.main-sidebar nav ul li a:hover {
-    background-color: #937e7e; /* 鼠標懸停的背景顏色變更 */
-}
-
-/* Content styles */
-.main-content {
-    margin-left: 250px; /* 與導航欄寬度一致或更大 */
-    padding: 20px;
-}
-
-.menu-toggle {
-    display: none; /* 預設隱藏按鈕 */
-    font-size: 1.5rem; /* 圖標大小 */
-    background: none;
-    border: none;
-    color: rgb(0, 0, 0); /* 圖標顏色 */
-}
-
-/* 在小螢幕上的樣式 */
-@media screen and (max-width: 1000px) {
-    .menu-toggle {
-    display: block; /* 在小螢幕上顯示漢堡菜單按鈕 */
-    position: absolute;
-    justify-content: center; /* 垂直置中 */
-    align-items: center; /* 水平置中 */
-    top: 10px;
-    left: 10px;
-    z-index: 2; /* 確保按鈕在側邊欄的上方 */
-    }
-
-    .menu-toggle.active {
-    content: '\2715'; /* 叉叉符號 */
-    }
-
-    .main-sidebar {
-    width: 0; /* 側邊欄寬度設為0 */
-    transition: width 0.3s ease; /* 寬度變化的過渡效果 */
-    }
-
-    .main-sidebar nav {
-    overflow: hidden; /* 初始狀態下隱藏導航內容 */
-    transition: height 0.3s ease; /* 動畫效果 */
-    }
-
-
-    .main-sidebar nav.active {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* 垂直置中 */
-    align-items: center; /* 水平置中 */
-    width: 100vh;            /* 覆蓋整個視窗寬度 */
-    height: 50vh;          /* 覆蓋整個視窗高度 */
-    background-color:#8d7070; /* 設置背景顏色 */
-    overflow: visible;
-    z-index: 1001;
-    }
-
-    .main-content {
-    margin-left: 0; /* 將側邊欄摺疊時內容填滿整個寬度 */
-    transition: margin-left 0.3s; /* 過渡效果讓變化更平滑 */
-    }
-}
-
    
 /* 貼文框和貼文內容 */
-
-
 
 .post-container{
     border-radius: 1.5rem;
