--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     scroll-behavior: smooth;
     outline: none; border: none;
     scroll-padding-top: 3rem;
+    
     font-family: var(--font-family-2);
     transition: .2s linear;
 }
@@ -22,6 +23,21 @@
     --poppins-font: "Poppins", sans-serif;
     --font-family-2: "Playfair Display", serif;
 }
+
+::-webkit-scrollbar {
+    width: 12px; /* 設定滾動條的寬度 */
+  }
+  
+  /* 改變滾動條滑塊（thumb）的樣式 */
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6b2af; /* 滾動塊的背景顏色 */
+    border-radius: 6px; /* 滾動塊的邊角圓滑度 */
+  }
+  
+  /* 改變滾動條軌道（track）的樣式 */
+  ::-webkit-scrollbar-track {
+    background-color: #f5eee4; /* 軌道的背景顏色 */
+  }
 
 html{
     overflow-x: hidden;
